@@ -73,7 +73,8 @@ EXAMPLE2
      #     [17] "SKIM",
      #     [18] "TKR",
      #     [19] "TRIPIE",
-     #     [20] "ZOUL"
+     #     [20] "ZEMAN",
+     #     [21] "ZOUL"
      # ]
 
 DEPENDENCIES
